--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>~/startpage</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<video autoplay muted loop id="my_video">
+    <source src="chicago.mp4" type="video/mp4">
+</video>
 
 <body>
     <div class="container">
